--- a/src/assets/zotero.bib
+++ b/src/assets/zotero.bib
@@ -3159,6 +3159,21 @@
   langid = {english}
 }
 
+@misc{dong2024,
+  title = {{{FAN}}: {{Fourier Analysis Networks}}},
+  shorttitle = {{{FAN}}},
+  author = {Dong, Yihong and Li, Ge and Tao, Yongding and Jiang, Xue and Zhang, Kechi and Li, Jia and Su, Jing and Zhang, Jun and Xu, Jingjing},
+  year = {2024},
+  month = nov,
+  number = {arXiv:2410.02675},
+  eprint = {2410.02675},
+  primaryclass = {cs},
+  doi = {10.48550/arXiv.2410.02675},
+  urldate = {2025-01-08},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Machine Learning}
+}
+
 @techreport{dorkenwald2023,
   type = {Preprint},
   title = {Neuronal Wiring Diagram of an Adult Brain},
@@ -7210,6 +7225,22 @@
   urldate = {2023-05-01},
   archiveprefix = {arXiv},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Multiagent Systems}
+}
+
+@misc{lu2024,
+  title = {{{JaxLife}}: {{An Open-Ended Agentic Simulator}}},
+  shorttitle = {{{JaxLife}}},
+  author = {Lu, Chris and Beukman, Michael and Matthews, Michael and Foerster, Jakob},
+  year = {2024},
+  month = sep,
+  number = {arXiv:2409.00853},
+  eprint = {2409.00853},
+  primaryclass = {cs},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2409.00853},
+  urldate = {2025-01-09},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Neural and Evolutionary Computing}
 }
 
 @article{lucas2020,
