--- a/src/assets/zotero.bib
+++ b/src/assets/zotero.bib
@@ -5813,6 +5813,21 @@
   langid = {english}
 }
 
+@inproceedings{justesen2019a,
+  title = {{{MAP-Elites}} for Noisy Domains by Adaptive Sampling},
+  booktitle = {Proceedings of the {{Genetic}} and {{Evolutionary Computation Conference Companion}}},
+  author = {Justesen, Niels and Risi, Sebastian and Mouret, Jean-Baptiste},
+  year = {2019},
+  month = jul,
+  pages = {121--122},
+  publisher = {ACM},
+  address = {Prague Czech Republic},
+  doi = {10.1145/3319619.3321904},
+  urldate = {2025-01-14},
+  isbn = {978-1-4503-6748-6},
+  langid = {english}
+}
+
 @article{kaczynski1995,
   title = {Industrial {{Society}} and {{Its Future}}},
   author = {Kaczynski, Theodore John},
@@ -6340,6 +6355,21 @@
   archiveprefix = {arXiv},
   langid = {english},
   keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,Physics - Physics and Society}
+}
+
+@misc{kumar2024,
+  title = {Automating the {{Search}} for {{Artificial Life}} with {{Foundation Models}}},
+  author = {Kumar, Akarsh and Lu, Chris and Kirsch, Louis and Tang, Yujin and Stanley, Kenneth O. and Isola, Phillip and Ha, David},
+  year = {2024},
+  month = dec,
+  number = {arXiv:2412.17799},
+  eprint = {2412.17799},
+  primaryclass = {cs},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2412.17799},
+  urldate = {2025-01-09},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Neural and Evolutionary Computing}
 }
 
 @book{lahera2021,
