--- a/src/assets/zotero.bib
+++ b/src/assets/zotero.bib
@@ -21,6 +21,15 @@
   langid = {english}
 }
 
+@misc{2024,
+  title = {Why {{America Chose Trump}}: {{Inflation}}, {{Immigration}}, and the {{Democratic Brand}}},
+  shorttitle = {Why {{America Chose Trump}}},
+  year = {2024},
+  month = nov,
+  urldate = {2025-02-21},
+  howpublished = {https://blueprint2024.com/polling/why-trump-reasons-11-8/}
+}
+
 @article{aaronson2020,
   title = {The {{Busy Beaver Frontier}}},
   author = {Aaronson, Scott},
@@ -92,6 +101,19 @@
   urldate = {2024-04-23},
   archiveprefix = {arXiv},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language}
+}
+
+@article{adams2025,
+  title = {Can a {{Single Human Supervise}} a {{Swarm}} of 100 {{Heterogeneous Robots}}?},
+  author = {Adams, Julie A. and Hamell, Joshua and Walker, Phillip},
+  year = {2025},
+  journal = {IEEE Transactions on Field Robotics},
+  volume = {2},
+  pages = {46--80},
+  issn = {2997-1101},
+  doi = {10.1109/TFR.2024.3502316},
+  urldate = {2025-01-27},
+  keywords = {ARPANET,Autonomous aerial vehicles,Autonomous robots,Buildings,Cameras,Command and control systems,Defense Advanced Research Projects Agency (DARPA) OFFensive Swarm-Enabled Tactics (OFFSET),Human-robot interaction,human-swarm interaction,multi-dimensional workload,Navigation,Particle swarm optimization,Payloads,Robot kinematics,Robot vision systems,Universal Serial Bus,US Department of Defense}
 }
 
 @article{adar2014,
@@ -2848,6 +2870,15 @@
   year = {2020}
 }
 
+@misc{deepseekai2024deepseekv3technicalreport,
+  title = {{{DeepSeek-V3}} Technical Report},
+  author = {{DeepSeek-AI} and Liu, Aixin and Feng, Bei and Xue, Bing and Wang, Bingxuan and Wu, Bochao and Lu, Chengda and Zhao, Chenggang and Deng, Chengqi and Zhang, Chenyu and Ruan, Chong and Dai, Damai and Guo, Daya and Yang, Dejian and Chen, Deli and Ji, Dongjie and Li, Erhang and Lin, Fangyun and Dai, Fucong and Luo, Fuli and Hao, Guangbo and Chen, Guanting and Li, Guowei and Zhang, H. and Bao, Han and Xu, Hanwei and Wang, Haocheng and Zhang, Haowei and Ding, Honghui and Xin, Huajian and Gao, Huazuo and Li, Hui and Qu, Hui and Cai, J. L. and Liang, Jian and Guo, Jianzhong and Ni, Jiaqi and Li, Jiashi and Wang, Jiawei and Chen, Jin and Chen, Jingchang and Yuan, Jingyang and Qiu, Junjie and Li, Junlong and Song, Junxiao and Dong, Kai and Hu, Kai and Gao, Kaige and Guan, Kang and Huang, Kexin and Yu, Kuai and Wang, Lean and Zhang, Lecong and Xu, Lei and Xia, Leyi and Zhao, Liang and Wang, Litong and Zhang, Liyue and Li, Meng and Wang, Miaojun and Zhang, Mingchuan and Zhang, Minghua and Tang, Minghui and Li, Mingming and Tian, Ning and Huang, Panpan and Wang, Peiyi and Zhang, Peng and Wang, Qiancheng and Zhu, Qihao and Chen, Qinyu and Du, Qiushi and Chen, R. J. and Jin, R. L. and Ge, Ruiqi and Zhang, Ruisong and Pan, Ruizhe and Wang, Runji and Xu, Runxin and Zhang, Ruoyu and Chen, Ruyi and Li, S. S. and Lu, Shanghao and Zhou, Shangyan and Chen, Shanhuang and Wu, Shaoqing and Ye, Shengfeng and Ye, Shengfeng and Ma, Shirong and Wang, Shiyu and Zhou, Shuang and Yu, Shuiping and Zhou, Shunfeng and Pan, Shuting and Wang, T. and Yun, Tao and Pei, Tian and Sun, Tianyu and Xiao, W. L. and Zeng, Wangding and Zhao, Wanjia and An, Wei and Liu, Wen and Liang, Wenfeng and Gao, Wenjun and Yu, Wenqin and Zhang, Wentao and Li, X. Q. and Jin, Xiangyue and Wang, Xianzu and Bi, Xiao and Liu, Xiaodong and Wang, Xiaohan and Shen, Xiaojin and Chen, Xiaokang and Zhang, Xiaokang and Chen, Xiaosha and Nie, Xiaotao and Sun, Xiaowen and Wang, Xiaoxiang and Cheng, Xin and Liu, Xin and Xie, Xin and Liu, Xingchao and Yu, Xingkai and Song, Xinnan and Shan, Xinxia and Zhou, Xinyi and Yang, Xinyu and Li, Xinyuan and Su, Xuecheng and Lin, Xuheng and Li, Y. K. and Wang, Y. Q. and Wei, Y. X. and Zhu, Y. X. and Zhang, Yang and Xu, Yanhong and Xu, Yanhong and Huang, Yanping and Li, Yao and Zhao, Yao and Sun, Yaofeng and Li, Yaohui and Wang, Yaohui and Yu, Yi and Zheng, Yi and Zhang, Yichao and Shi, Yifan and Xiong, Yiliang and He, Ying and Tang, Ying and Piao, Yishi and Wang, Yisong and Tan, Yixuan and Ma, Yiyang and Liu, Yiyuan and Guo, Yongqiang and Wu, Yu and Ou, Yuan and Zhu, Yuchen and Wang, Yuduan and Gong, Yue and Zou, Yuheng and He, Yujia and Zha, Yukun and Xiong, Yunfan and Ma, Yunxian and Yan, Yuting and Luo, Yuxiang and You, Yuxiang and Liu, Yuxuan and Zhou, Yuyang and Wu, Z. F. and Ren, Z. Z. and Ren, Zehui and Sha, Zhangli and Fu, Zhe and Xu, Zhean and Huang, Zhen and Zhang, Zhen and Xie, Zhenda and Zhang, Zhengyan and Hao, Zhewen and Gou, Zhibin and Ma, Zhicheng and Yan, Zhigang and Shao, Zhihong and Xu, Zhipeng and Wu, Zhiyu and Zhang, Zhongyu and Li, Zhuoshu and Gu, Zihui and Zhu, Zijia and Liu, Zijun and Li, Zilin and Xie, Ziwei and Song, Ziyang and Gao, Ziyi and Pan, Zizheng},
+  year = {2024},
+  eprint = {2412.19437},
+  primaryclass = {cs.CL},
+  archiveprefix = {arXiv}
+}
+
 @article{degrave2022,
   title = {Magnetic Control of Tokamak Plasmas through Deep Reinforcement Learning},
   author = {Degrave, Jonas and Felici, Federico and Buchli, Jonas and Neunert, Michael and Tracey, Brendan and Carpanese, Francesco and Ewalds, Timo and Hafner, Roland and Abdolmaleki, Abbas and De Las Casas, Diego and Donner, Craig and Fritz, Leslie and Galperti, Cristian and Huber, Andrea and Keeling, James and Tsimpoukelli, Maria and Kay, Jackie and Merle, Antoine and Moret, Jean-Marc and Noury, Seb and Pesamosca, Federico and Pfau, David and Sauter, Olivier and Sommariva, Cristian and Coda, Stefano and Duval, Basil and Fasoli, Ambrogio and Kohli, Pushmeet and Kavukcuoglu, Koray and Hassabis, Demis and Riedmiller, Martin},
@@ -3040,6 +3071,18 @@
   archiveprefix = {arXiv}
 }
 
+@article{dharna,
+  title = {Quality-{{Diversity Self-Play}}: {{Open-Ended Strategy Innovation}} via {{Foundation Models}}},
+  author = {Dharna, Aaron and Lu, Cong and Clune, Jeff},
+  langid = {english}
+}
+
+@article{dharnaa,
+  title = {Quality-{{Diversity Self-Play}}: {{Open-Ended Strategy Innovation}} via {{Foundation Models}}},
+  author = {Dharna, Aaron and Lu, Cong and Clune, Jeff},
+  langid = {english}
+}
+
 @book{diamond2005,
   title = {Collapse: How Societies Choose to Fail or Succeed},
   shorttitle = {Collapse},
@@ -3096,6 +3139,18 @@
   issn = {0036-8075, 1095-9203},
   doi = {10.1126/science.ade9097},
   urldate = {2023-11-06},
+  langid = {english}
+}
+
+@article{dixon,
+  title = {From {{Superconductors}} to {{Supercolliders}}},
+  author = {Dixon, Lance},
+  langid = {english}
+}
+
+@article{dixona,
+  title = {From {{Superconductors}} to {{Supercolliders}}},
+  author = {Dixon, Lance},
   langid = {english}
 }
 
@@ -6229,6 +6284,20 @@
   urldate = {2023-05-13}
 }
 
+@article{kondrashev1991,
+  title = {A History of {{APL}} in the {{USSR}}},
+  author = {Kondrashev, Andrei and Luksha, Oleg},
+  year = {1991},
+  month = dec,
+  journal = {SIGAPL APL Quote Quad},
+  volume = {22},
+  number = {2},
+  pages = {8--12},
+  issn = {0163-6006},
+  doi = {10.1145/130647.130656},
+  urldate = {2025-01-31}
+}
+
 @article{kong2023,
   title = {Reinforcement {{Learning}} for {{Multiaircraft Autonomous Air Combat}} in {{Multisensor UCAV Platform}}},
   author = {Kong, Weiren and Zhou, Deyun and Du, Yongjie and Zhou, Ying and Zhao, Yiyang},
@@ -8555,6 +8624,22 @@
   urldate = {2024-02-02},
   archiveprefix = {arXiv},
   keywords = {Computer Science - Machine Learning,Computer Science - Neural and Evolutionary Computing}
+}
+
+@inbook{onnes1991,
+  title = {Further Experiments with {{Liquid Helium}}. {{G}}. {{On}} the {{Electrical Resistance}} of {{Pure Metals}}, Etc. {{VI}}. {{On}} the {{Sudden Change}} in the {{Rate}} at Which the {{Resistance}} of {{Mercury Disappears}}.},
+  booktitle = {Through {{Measurement}} to {{Knowledge}}},
+  author = {Onnes, H. Kamerlingh},
+  year = {1991},
+  volume = {124},
+  pages = {267--272},
+  publisher = {Springer Netherlands},
+  address = {Dordrecht},
+  doi = {10.1007/978-94-009-2079-8_17},
+  urldate = {2025-02-16},
+  collaborator = {Onnes, Heike Kamerlingh},
+  isbn = {978-94-010-7433-9 978-94-009-2079-8},
+  langid = {english}
 }
 
 @article{ontanon2013,
@@ -12961,6 +13046,21 @@
   archiveprefix = {arXiv},
   langid = {english},
   keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning}
+}
+
+@misc{ye2025,
+  title = {{{LIMO}}: {{Less}} Is {{More}} for {{Reasoning}}},
+  shorttitle = {{{LIMO}}},
+  author = {Ye, Yixin and Huang, Zhen and Xiao, Yang and Chern, Ethan and Xia, Shijie and Liu, Pengfei},
+  year = {2025},
+  month = feb,
+  number = {arXiv:2502.03387},
+  eprint = {2502.03387},
+  primaryclass = {cs},
+  doi = {10.48550/arXiv.2502.03387},
+  urldate = {2025-02-10},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language}
 }
 
 @misc{yim2024,
