--- a/src/assets/zotero.bib
+++ b/src/assets/zotero.bib
@@ -475,6 +475,21 @@
   langid = {english}
 }
 
+@misc{arriola2025,
+  title = {Block {{Diffusion}}: {{Interpolating Between Autoregressive}} and {{Diffusion Language Models}}},
+  shorttitle = {Block {{Diffusion}}},
+  author = {Arriola, Marianne and Gokaslan, Aaron and Chiu, Justin T. and Yang, Zhihan and Qi, Zhixuan and Han, Jiaqi and Sahoo, Subham Sekhar and Kuleshov, Volodymyr},
+  year = {2025},
+  month = mar,
+  number = {arXiv:2503.09573},
+  eprint = {2503.09573},
+  primaryclass = {cs},
+  doi = {10.48550/arXiv.2503.09573},
+  urldate = {2025-03-14},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Machine Learning}
+}
+
 @article{arulkumaran2017,
   title = {Deep Reinforcement Learning: {{A}} Brief Survey},
   author = {Arulkumaran, Kai and Deisenroth, Marc Peter and Brundage, Miles and Bharath, Anil Anthony},
@@ -733,6 +748,22 @@
   title = {Reinforcement {{Learning}} as a {{Rehearsal}} for {{Planning}} in {{Air Battle Management}} ({{RLAR}})},
   author = {Banerjee, Bikramjit},
   year = {2023},
+  langid = {english}
+}
+
+@article{bansi-matharu2023,
+  title = {Cost-Effectiveness of Voluntary Medical Male Circumcision for {{HIV}} Prevention across Sub-{{Saharan Africa}}: Results from Five Independent Models},
+  shorttitle = {Cost-Effectiveness of Voluntary Medical Male Circumcision for {{HIV}} Prevention across Sub-{{Saharan Africa}}},
+  author = {{Bansi-Matharu}, Loveleen and Mudimu, Edinah and {Martin-Hughes}, Rowan and Hamilton, Matt and Johnson, Leigh and Ten Brink, Debra and Stover, John and {Meyer-Rath}, Gesine and Kelly, Sherrie L and Jamieson, Lise and Cambiano, Valentina and Jahn, Andreas and Cowan, Frances M and Mangenah, Collin and Mavhu, Webster and Chidarikire, Thato and Toledo, Carlos and Revill, Paul and Sundaram, Maaya and Hatzold, Karin and Yansaneh, Aisha and Apollo, Tsitsi and Kalua, Thoko and Mugurungi, Owen and Kiggundu, Valerian and Zhang, Shufang and Nyirenda, Rose and Phillips, Andrew and Kripke, Katharine and Bershteyn, Anna},
+  year = {2023},
+  month = feb,
+  journal = {The Lancet Global Health},
+  volume = {11},
+  number = {2},
+  pages = {e244-e255},
+  issn = {2214109X},
+  doi = {10.1016/S2214-109X(22)00515-0},
+  urldate = {2025-03-03},
   langid = {english}
 }
 
@@ -2864,6 +2895,23 @@
   keywords = {Computational neuroscience,Computer simulation,Human information processing,Neural networks (Neurobiology)}
 }
 
+@misc{deb2025,
+  title = {{{TopoNets}}: {{High Performing Vision}} and {{Language Models}} with {{Brain-Like Topography}}},
+  shorttitle = {{{TopoNets}}},
+  author = {Deb, Mayukh and Deb, Mainak and Murty, N. Apurva Ratan},
+  year = {2025},
+  month = jan,
+  number = {arXiv:2501.16396},
+  eprint = {2501.16396},
+  primaryclass = {cs},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2501.16396},
+  urldate = {2025-03-03},
+  archiveprefix = {arXiv},
+  langid = {english},
+  keywords = {Computer Science - Machine Learning,Computer Science - Neural and Evolutionary Computing,Quantitative Biology - Neurons and Cognition}
+}
+
 @misc{deepmind2020jax,
   title = {The {{DeepMind JAX Ecosystem}}},
   author = {{DeepMind} and Babuschkin, Igor and Baumli, Kate and Bell, Alison and Bhupatiraju, Surya and Bruce, Jake and Buchlovsky, Peter and Budden, David and Cai, Trevor and Clark, Aidan and Danihelka, Ivo and Dedieu, Antoine and Fantacci, Claudio and Godwin, Jonathan and Jones, Chris and Hemsley, Ross and Hennigan, Tom and Hessel, Matteo and Hou, Shaobo and Kapturowski, Steven and Keck, Thomas and Kemaev, Iurii and King, Michael and Kunesch, Markus and Martens, Lena and Merzic, Hamza and Mikulik, Vladimir and Norman, Tamara and Papamakarios, George and Quan, John and Ring, Roman and Ruiz, Francisco and Sanchez, Alvaro and Sartran, Laurent and Schneider, Rosalia and Sezener, Eren and Spencer, Stephen and Srinivasan, Srivatsan and Stanojevi{\'c}, Milo{\v s} and Stokowiec, Wojciech and Wang, Luyu and Zhou, Guangyao and Viola, Fabio},
@@ -2995,6 +3043,16 @@
   copyright = {2023 The Author(s)},
   langid = {english},
   keywords = {Energy management,Energy modelling,Energy policy}
+}
+
+@inproceedings{deng2024,
+  title = {Can {{LLMs Implicitly Learn Numeric Parameter Constraints}} in {{Data Science APIs}}?},
+  booktitle = {The {{Thirty-eighth Annual Conference}} on {{Neural Information Processing Systems}}},
+  author = {Deng, Yinlin and Xia, Chunqiu Steven and Cao, Zhezhen and Li, Meiziniu and Zhang, Lingming},
+  year = {2024},
+  month = nov,
+  urldate = {2025-03-03},
+  langid = {english}
 }
 
 @misc{denton2015,
@@ -3143,12 +3201,6 @@
 }
 
 @article{dixon,
-  title = {From {{Superconductors}} to {{Supercolliders}}},
-  author = {Dixon, Lance},
-  langid = {english}
-}
-
-@article{dixona,
   title = {From {{Superconductors}} to {{Supercolliders}}},
   author = {Dixon, Lance},
   langid = {english}
@@ -3426,6 +3478,22 @@
   archiveprefix = {arXiv}
 }
 
+@article{erard2023,
+  title = {Beyond {{Last Words}}: {{Patterns}} of {{Linguistic}} and {{Interactional Behavior}} in a {{Historical Sample}} of {{Dying Hospital Patients}}},
+  shorttitle = {Beyond {{Last Words}}},
+  author = {Erard, Michael},
+  year = {2023},
+  month = feb,
+  journal = {OMEGA - Journal of Death and Dying},
+  volume = {86},
+  number = {3},
+  pages = {1089--1107},
+  issn = {0030-2228, 1541-3764},
+  doi = {10.1177/00302228211000938},
+  urldate = {2025-03-03},
+  langid = {english}
+}
+
 @book{euclides2007,
   title = {Euclid's {{Elements}}: All Thirteen Books Complete in One Volume},
   shorttitle = {Euclid's {{Elements}}},
@@ -3510,6 +3578,22 @@
   institution = {In Review},
   doi = {10.21203/rs.3.rs-1458483/v1},
   urldate = {2024-03-20},
+  langid = {english}
+}
+
+@article{faragher2012,
+  title = {Understanding the {{Basis}} of the {{Kalman Filter Via}} a {{Simple}} and {{Intuitive Derivation}} [{{Lecture Notes}}]},
+  author = {Faragher, Ramsey},
+  year = {2012},
+  month = sep,
+  journal = {IEEE Signal Processing Magazine},
+  volume = {29},
+  number = {5},
+  pages = {128--132},
+  issn = {1053-5888},
+  doi = {10.1109/MSP.2012.2203621},
+  urldate = {2025-03-03},
+  copyright = {https://ieeexplore.ieee.org/Xplorehelp/downloads/license-information/IEEE.html},
   langid = {english}
 }
 
@@ -5543,6 +5627,21 @@
   langid = {english}
 }
 
+@article{internationalspaceelevatorconsortium2023,
+  title = {Building the {{Space Elevator Tether}}},
+  author = {{International Space Elevator Consortium} and Wright, Dennis H},
+  year = {2023},
+  month = oct,
+  journal = {Journal of the British Interplanetary Society},
+  volume = {76},
+  number = {7},
+  pages = {225--231},
+  issn = {0007084X},
+  doi = {10.59332/jbis-076-07-0225},
+  urldate = {2025-03-23},
+  langid = {english}
+}
+
 @article{iovino2022,
   title = {A Survey of {{Behavior Trees}} in Robotics and {{AI}}},
   author = {Iovino, Matteo and Scukins, Edvards and Styrud, Jonathan and {\"O}gren, Petter and Smith, Christian},
@@ -5602,6 +5701,20 @@
   journal = {Institute for the Study of War},
   urldate = {2024-06-04},
   howpublished = {https://www.understandingwar.org/},
+  langid = {english}
+}
+
+@article{jackson2024,
+  title = {The Price of a Cigarette: 20 Minutes of Life?},
+  shorttitle = {The Price of a Cigarette},
+  author = {Jackson, Sarah E. and Jarvis, Martin J. and West, Robert},
+  year = {2024},
+  month = dec,
+  journal = {Addiction},
+  pages = {add.16757},
+  issn = {0965-2140, 1360-0443},
+  doi = {10.1111/add.16757},
+  urldate = {2025-02-28},
   langid = {english}
 }
 
@@ -6718,6 +6831,21 @@
   doi = {10.1145/3306618.3314268},
   urldate = {2024-01-14},
   isbn = {978-1-4503-6324-2},
+  langid = {english}
+}
+
+@article{levin2019,
+  title = {The {{Computational Boundary}} of a ``{{Self}}'': {{Developmental Bioelectricity Drives Multicellularity}} and {{Scale-Free Cognition}}},
+  shorttitle = {The {{Computational Boundary}} of a ``{{Self}}''},
+  author = {Levin, Michael},
+  year = {2019},
+  month = dec,
+  journal = {Frontiers in Psychology},
+  volume = {10},
+  pages = {2688},
+  issn = {1664-1078},
+  doi = {10.3389/fpsyg.2019.02688},
+  urldate = {2025-03-02},
   langid = {english}
 }
 
@@ -8582,6 +8710,20 @@
   langid = {english}
 }
 
+@article{oh2025,
+  title = {Evaluating {{Mathematical Problem-Solving Abilities}} of {{Generative AI Models}}: {{Performance Analysis}} of O1-Preview and Gpt-4o {{Using}} the {{Korean College Scholastic Ability Test}}},
+  shorttitle = {Evaluating {{Mathematical Problem-Solving Abilities}} of {{Generative AI Models}}},
+  author = {Oh, Sejun},
+  year = {2025},
+  journal = {IEEE Access},
+  volume = {13},
+  pages = {1227--1235},
+  issn = {2169-3536},
+  doi = {10.1109/ACCESS.2024.3523703},
+  urldate = {2025-03-03},
+  keywords = {Accuracy,AI educational applications,Analytical models,Artificial intelligence,Chatbots,Cognition,college scholastic ability test,Data models,Education,Generative AI,Mathematical models,mathematical problem-solving,o1-preview,Problem-solving}
+}
+
 @article{olah2017,
   title = {Feature {{Visualization}}},
   author = {Olah, Chris and Mordvintsev, Alexander and Schubert, Ludwig},
@@ -8766,6 +8908,36 @@
   urldate = {2023-12-31},
   copyright = {arXiv.org perpetual, non-exclusive license},
   keywords = {Artificial Intelligence (cs.AI),Computation and Language (cs.CL),FOS: Computer and information sciences,Machine Learning (cs.LG)}
+}
+
+@article{ouyang2025a,
+  title = {An {{Empirical Study}} of the {{Non-Determinism}} of {{ChatGPT}} in {{Code Generation}}},
+  author = {Ouyang, Shuyin and Zhang, Jie M. and Harman, Mark and Wang, Meng},
+  year = {2025},
+  month = jan,
+  journal = {ACM Trans. Softw. Eng. Methodol.},
+  volume = {34},
+  number = {2},
+  pages = {42:1--42:28},
+  issn = {1049-331X},
+  doi = {10.1145/3697010},
+  urldate = {2025-03-03}
+}
+
+@article{owen1997,
+  title = {The Origins of 60-{{Hz}} as a Power Frequency},
+  author = {Owen, E.L.},
+  year = {1997},
+  month = nov,
+  journal = {IEEE Industry Applications Magazine},
+  volume = {3},
+  number = {6},
+  pages = {8--14},
+  issn = {1077-2618, 1558-0598},
+  doi = {10.1109/2943.628099},
+  urldate = {2025-03-03},
+  copyright = {https://ieeexplore.ieee.org/Xplorehelp/downloads/license-information/IEEE.html},
+  langid = {english}
 }
 
 @inproceedings{oxman2007,
@@ -11717,6 +11889,16 @@
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language}
 }
 
+@misc{towers2025,
+  title = {Gymnasium: {{A Standard Interface}} for {{Reinforcement Learning Environments}}},
+  shorttitle = {Gymnasium},
+  author = {Towers, Mark and Kwiatkowski, Ariel and Terry, Jordan K and Balis, John U. and {de Cola}, Gianluca and Deleu, Tristan and Goul{\~a}o, Manuel and Kallinteris, Andreas and Krimmel, Markus and KG, Arjun and {Perez-Vicente}, Rodrigo and Pierr{\'e}, Andrea and Schulhoff, Sander and Tai, Jun Jet and Tan, Hannah Jin Shen and Younis, Omar G.},
+  year = {2025},
+  month = mar,
+  urldate = {2025-03-19},
+  copyright = {MIT}
+}
+
 @article{trinh2024,
   title = {Solving Olympiad Geometry without Human Demonstrations},
   author = {Trinh, Trieu H. and Wu, Yuhuai and Le, Quoc V. and He, He and Luong, Thang},
@@ -12391,6 +12573,34 @@
   urldate = {2024-12-03},
   copyright = {arXiv.org perpetual, non-exclusive license},
   keywords = {Artificial Intelligence (cs.AI),Computation and Language (cs.CL),FOS: Computer and information sciences}
+}
+
+@article{wang2024c,
+  title = {Exploring {{Equation}} as a {{Better Intermediate Meaning Representation}} for {{Numerical Reasoning}} of {{Large Language Models}}},
+  author = {Wang, Dingzirui and Dou, Longxu and Zhang, Wenbin and Zeng, Junyu and Che, Wanxiang},
+  year = {2024},
+  month = mar,
+  journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume = {38},
+  number = {17},
+  pages = {19116--19125},
+  issn = {2374-3468, 2159-5399},
+  doi = {10.1609/aaai.v38i17.29879},
+  urldate = {2025-03-03},
+  langid = {english}
+}
+
+@article{wang2024d,
+  title = {Evaluating {{Causal Reasoning Capabilities}} of {{Large Language Models}}: {{A Systematic Analysis Across Three Scenarios}}},
+  shorttitle = {Evaluating {{Causal Reasoning Capabilities}} of {{Large Language Models}}},
+  author = {Wang, Lei 1 and Shen, Yiqing 2 1 School of Software Engineering and Guangzhou Intelligence Communications Technology Co., Ltd},
+  year = {2024},
+  pages = {4584},
+  publisher = {MDPI AG},
+  doi = {10.3390/electronics13234584},
+  urldate = {2025-03-03},
+  copyright = {{\copyright} 2024 by the authors.  Licensee MDPI, Basel, Switzerland. This article is an open access article distributed under the terms and conditions of the Creative Commons Attribution (CC BY) license (https://creativecommons.org/licenses/by/4.0/).  Notwithstanding the ProQuest Terms and Conditions, you may use this content in accordance with the terms of the License.},
+  langid = {english}
 }
 
 @misc{wangChainofThoughtReasoningPrompting2024,
@@ -13624,6 +13834,20 @@
   urldate = {2024-01-14},
   isbn = {978-981-99-0478-5 978-981-99-0479-2},
   langid = {english}
+}
+
+@misc{zhu2025,
+  title = {Transformers without {{Normalization}}},
+  author = {Zhu, Jiachen and Chen, Xinlei and He, Kaiming and LeCun, Yann and Liu, Zhuang},
+  year = {2025},
+  month = mar,
+  number = {arXiv:2503.10622},
+  eprint = {2503.10622},
+  primaryclass = {cs},
+  doi = {10.48550/arXiv.2503.10622},
+  urldate = {2025-03-15},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning}
 }
 
 @misc{zotero-2614,
