presentation mode toggle with f

--- a/src/assets/zotero.bib
+++ b/src/assets/zotero.bib
@@ -11446,6 +11446,20 @@
   archiveprefix = {arXiv}
 }
 
+@misc{sugawara2003,
+  title = {Destruction of {{Nuclear Bombs Using Ultra-High Energy Neutrino Beam}}},
+  author = {Sugawara, Hirotaka and Hagura, Hiroyuki and Sanami, Toshiya},
+  year = {2003},
+  month = jun,
+  number = {arXiv:hep-ph/0305062},
+  eprint = {hep-ph/0305062},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.hep-ph/0305062},
+  urldate = {2025-03-28},
+  archiveprefix = {arXiv},
+  keywords = {High Energy Physics - Experiment,High Energy Physics - Phenomenology}
+}
+
 @misc{sunRetentiveNetworkSuccessor2023,
   title = {Retentive {{Network}}: {{A Successor}} to {{Transformer}} for {{Large Language Models}}},
   shorttitle = {Retentive {{Network}}},
