git test local remote on netlify

--- a/src/assets/zotero.bib
+++ b/src/assets/zotero.bib
@@ -6764,6 +6764,20 @@
   langid = {english}
 }
 
+@misc{lehman2025,
+  title = {Evolution and {{The Knightian Blindspot}} of {{Machine Learning}}},
+  author = {Lehman, Joel and Meyerson, Elliot and {El-Gaaly}, Tarek and Stanley, Kenneth O. and Ziyaee, Tarin},
+  year = {2025},
+  month = jan,
+  number = {arXiv:2501.13075},
+  eprint = {2501.13075},
+  primaryclass = {cs},
+  doi = {10.48550/arXiv.2501.13075},
+  urldate = {2025-04-09},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Artificial Intelligence}
+}
+
 @misc{lehmanEvolutionLargeModels2022,
   title = {Evolution through {{Large Models}}},
   author = {Lehman, Joel and Gordon, Jonathan and Jain, Shawn and Ndousse, Kamal and Yeh, Cathy and Stanley, Kenneth O.},
@@ -11901,6 +11915,22 @@
   urldate = {2024-01-21},
   archiveprefix = {arXiv},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language}
+}
+
+@misc{towers2024,
+  title = {Gymnasium: {{A Standard Interface}} for {{Reinforcement Learning Environments}}},
+  shorttitle = {Gymnasium},
+  author = {Towers, Mark and Kwiatkowski, Ariel and Terry, Jordan and Balis, John U. and Cola, Gianluca De and Deleu, Tristan and Goul{\~a}o, Manuel and Kallinteris, Andreas and Krimmel, Markus and KG, Arjun and {Perez-Vicente}, Rodrigo and Pierr{\'e}, Andrea and Schulhoff, Sander and Tai, Jun Jet and Tan, Hannah and Younis, Omar G.},
+  year = {2024},
+  month = nov,
+  number = {arXiv:2407.17032},
+  eprint = {2407.17032},
+  primaryclass = {cs},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2407.17032},
+  urldate = {2025-04-17},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Digital Libraries,Computer Science - Machine Learning}
 }
 
 @misc{towers2025,
