--- a/src/assets/zotero.bib
+++ b/src/assets/zotero.bib
@@ -362,6 +362,19 @@
   keywords = {Computer Science - Artificial Intelligence}
 }
 
+@article{anne2025,
+  title = {Harnessing {{Language}} for {{Coordination}}: {{A Framework}} and {{Benchmark}} for {{LLM-Driven Multi-Agent Control}}},
+  shorttitle = {Harnessing {{Language}} for {{Coordination}}},
+  author = {Anne, Timoth{\'e}e and Syrkis, Noah and Elhosni, Meriem and Turati, Florian and Legendre, Franck and Jaquier, Alain and Risi, Sebastian},
+  year = {2025},
+  journal = {IEEE Transactions on Games},
+  pages = {1--25},
+  issn = {2475-1510},
+  doi = {10.1109/TG.2025.3564042},
+  urldate = {2025-05-06},
+  keywords = {Behavior tree,Benchmark testing,Bridges,Cognition,Collaboration,Games,large language models,multi-agent,Multi-agent systems,Real-time systems,Strategic planning,strategy games,Translation,Visualization}
+}
+
 @article{anselin2010,
   title = {Local {{Indicators}} of {{Spatial Association-LISA}}},
   author = {Anselin, Luc},
@@ -1332,6 +1345,16 @@
   langid = {english}
 }
 
+@misc{blasjo2018,
+  title = {Galileo Bad, {{Archimedes}} Good},
+  author = {Blasjo, Viktor},
+  year = {2018},
+  month = nov,
+  number = {1},
+  urldate = {2025-05-08},
+  langid = {american}
+}
+
 @article{bocchi2022,
   title = {A {{Theory}} of {{Composing Protocols}}},
   author = {Bocchi, Laura and Orchard, Dominic and Voinea, A. Laura},
@@ -1445,6 +1468,17 @@
   year = {2009},
   pages = {26--32},
   keywords = {Definition Extraction,Genetic Algorithms,Genetic Program-ming}
+}
+
+@incollection{borges1962garden,
+  title = {The Garden of Forking Paths},
+  booktitle = {Ficciones},
+  author = {Borges, Jorge Luis},
+  editor = {Kerrigan, Anthony},
+  translator = {Boucher, Anthony and Yates, Donald A.},
+  year = {1962},
+  publisher = {Grove Press},
+  address = {New York}
 }
 
 @book{borgman2015,
@@ -2502,6 +2536,16 @@
   urldate = {2024-01-21},
   archiveprefix = {arXiv},
   keywords = {Computer Science - Machine Learning}
+}
+
+@book{conrad1902,
+  title = {Typhoon},
+  author = {Conrad, Joseph},
+  year = {1902},
+  publisher = {Pall Mall Magazine},
+  address = {United Kingdom},
+  urldate = {2025-05-12},
+  langid = {american}
 }
 
 @article{conselice2016,
@@ -4442,6 +4486,14 @@
   keywords = {Computer Science - Artificial Intelligence}
 }
 
+@misc{goodwork2025,
+  title = {What Does {{Palantir}} Actually Do?},
+  author = {{Good Work}},
+  year = {2025},
+  month = mar,
+  urldate = {2025-05-12}
+}
+
 @article{gorshkov2022,
   title = {Scientific {{Applications}} of {{Distributed Acoustic Sensing}}: {{State-of-the-Art Review}} and {{Perspective}}},
   shorttitle = {Scientific {{Applications}} of {{Distributed Acoustic Sensing}}},
@@ -5743,6 +5795,14 @@
   month = sep,
   urldate = {2023-12-21},
   langid = {english}
+}
+
+@misc{jairbolsonaro2014,
+  title = {{{SIRKIS DIZ QUE EM}} 10 {{ANOS A}} "{{DEMOCRACIA}}" {{CUBANA SER{\'A} CAPITALISTA}}},
+  author = {{Jair Bolsonaro}},
+  year = {2014},
+  month = nov,
+  urldate = {2025-05-12}
 }
 
 @book{james2013,
@@ -8374,6 +8434,19 @@
   keywords = {Body,Cognition,Computation,Control,Embodiment,Soft robotics}
 }
 
+@misc{mundler2025,
+  title = {Type-{{Constrained Code Generation}} with {{Language Models}}},
+  author = {M{\"u}ndler, Niels and He, Jingxuan and Wang, Hao and Sen, Koushik and Song, Dawn and Vechev, Martin},
+  year = {2025},
+  month = may,
+  eprint = {2504.09246},
+  primaryclass = {cs},
+  doi = {10.1145/3729274},
+  urldate = {2025-05-14},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Machine Learning,Computer Science - Programming Languages}
+}
+
 @book{murphy2022,
   title = {Probabilistic Machine Learning: An Introduction},
   shorttitle = {Probabilistic Machine Learning},
@@ -10895,6 +10968,19 @@
   langid = {english}
 }
 
+@techreport{shull1999,
+  title = {The {{Battle}} of {{Dien Bien Phu}}: {{Strategic}}, {{Operational}} and {{Tactical Failure}}:},
+  shorttitle = {The {{Battle}} of {{Dien Bien Phu}}},
+  author = {Shull, Patrick W.},
+  year = {1999},
+  month = apr,
+  address = {Fort Belvoir, VA},
+  institution = {Defense Technical Information Center},
+  doi = {10.21236/ADA363910},
+  urldate = {2025-05-12},
+  langid = {english}
+}
+
 @misc{shwartz-ziv2017,
   title = {Opening the {{Black Box}} of {{Deep Neural Networks}} via {{Information}}},
   author = {{Shwartz-Ziv}, Ravid and Tishby, Naftali},
@@ -11018,6 +11104,15 @@
   doi = {10.1109/ICRA48891.2023.10161317},
   urldate = {2023-12-30},
   isbn = {9798350323658}
+}
+
+@book{sirkis1985silicone,
+  title = {{Silicone XXI}},
+  author = {Sirkis, Alfredo},
+  year = {1985},
+  publisher = {Editora Codecri},
+  address = {Rio de Janeiro, Brazil},
+  langid = {portuguese}
 }
 
 @article{sirkis2000,
@@ -12400,6 +12495,14 @@
   keywords = {Affective goals,Behavioural goals,Cognitive goals,Digital games,Game-based learning,Higher education,Learning outcomes,Pedagogical use,Simulations}
 }
 
+@book{vonclausewitz1832,
+  title = {On {{War}}},
+  author = {{von Clausewitz}, Carl},
+  year = {1832},
+  urldate = {2025-05-08},
+  langid = {american}
+}
+
 @article{vonneumann1928,
   title = {{Zur Theorie der Gesellschaftsspiele}},
   author = {{von Neumann}, John},
@@ -12774,6 +12877,21 @@
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Machine Learning,Statistics - Machine Learning}
 }
 
+@article{weed2004,
+  title = {A {{Labyrinth}} of {{Symbols}}: {{Exploring}} '{{The Garden}} of {{Forking Paths}}'},
+  shorttitle = {A {{Labyrinth}} of {{Symbols}}},
+  author = {Weed, Ethan},
+  year = {2004},
+  journal = {Variaciones Borges},
+  number = {18},
+  eprint = {24880439},
+  eprinttype = {jstor},
+  pages = {161--189},
+  publisher = {Borges Center, University of Pittsburgh},
+  issn = {1396-0482},
+  urldate = {2025-05-07}
+}
+
 @article{wei2021,
   title = {Finetuned Language Models Are Zero-Shot Learners},
   author = {Wei, Jason and Bosma, Maarten and Zhao, Vincent Y and Guu, Kelvin and Yu, Adams Wei and Lester, Brian and Du, Nan and Dai, Andrew M and Le, Quoc V},
@@ -12890,6 +13008,23 @@
   urldate = {2023-11-16},
   archiveprefix = {arXiv},
   keywords = {Computer Science - Computer Vision and Pattern Recognition}
+}
+
+@article{wooldridge1995,
+  title = {Intelligent Agents: Theory and Practice},
+  shorttitle = {Intelligent Agents},
+  author = {Wooldridge, Michael and Jennings, Nicholas R.},
+  year = {1995},
+  month = jun,
+  journal = {The Knowledge Engineering Review},
+  volume = {10},
+  number = {2},
+  pages = {115--152},
+  issn = {0269-8889, 1469-8005},
+  doi = {10.1017/S0269888900008122},
+  urldate = {2025-05-08},
+  copyright = {https://www.cambridge.org/core/terms},
+  langid = {english}
 }
 
 @inproceedings{woolley2014,
@@ -13739,6 +13874,22 @@
   langid = {english}
 }
 
+@misc{zhao2025,
+  title = {Absolute {{Zero}}: {{Reinforced Self-play Reasoning}} with {{Zero Data}}},
+  shorttitle = {Absolute {{Zero}}},
+  author = {Zhao, Andrew and Wu, Yiran and Yue, Yang and Wu, Tong and Xu, Quentin and Yue, Yang and Lin, Matthieu and Wang, Shenzhi and Wu, Qingyun and Zheng, Zilong and Huang, Gao},
+  year = {2025},
+  month = may,
+  number = {arXiv:2505.03335},
+  eprint = {2505.03335},
+  primaryclass = {cs},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2505.03335},
+  urldate = {2025-05-08},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Machine Learning}
+}
+
 @inproceedings{zhen2018,
   title = {Artificial {{Intelligence Techniques}} on {{Real-time Strategy Games}}},
   booktitle = {Proceedings of the 2018 2nd {{International Conference}} on {{Computer Science}} and {{Artificial Intelligence}}},
@@ -13898,6 +14049,12 @@
   title = {Noah {{Syrkis}}},
   urldate = {2024-12-28},
   howpublished = {http://localhost:4324/}
+}
+
+@misc{zotero-item-2731,
+  title = {Battle of {{Dien Bien Phu}} {\textbar} {{French Foreign Legion Information}}},
+  urldate = {2025-05-12},
+  langid = {american}
 }
 
 @incollection{zou2023,
